[tool.poetry]
name = "mod-mender"
version = "0.1.0"
description = "Automated mod updater"
authors = ["zer0p1us <42619260+zer0p1us@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mod_mender", from = "src"}]
scripts.mod-mender = "mod_mender.main:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
textual = {extras = ["dev"], version = "^0.26.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
