[tool.poetry]
name = "mod-mender"
version = "0.2.0"
description = "Automated mod updater"
authors = ["zer0p1us <42619260+zer0p1us@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mod_mender", from = "src"}]
scripts.mod-mender = "mod_mender.main:main"

[tool.poetry.dependencies]
python = "^3.10"
# used for http gets to download mod jars, api requests etc.
requests = "^2.30.0"
# terminal ui library, not used yet, might be removed if not used in ui refresh
textual = {extras = ["dev"], version = "^0.26.0"}
# for command line parsing of params
click = "^8.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
